--- a/index.html
+++ b/index.html
@@ -35,31 +35,31 @@
 			<section ontouchmove="BlockMove(event);">
 				<div id="slider">
 					<figure>
-						<a class="skoda" href="#">
+						<a class="skoda" href="#1">
 							<div>
 								<h1>Auglýsing 1</h1>
 								<h3>Getur ýtt á til að opna link<br>Á eftir að breyta litum finnst þeir ekki passa</h3>
 							</div>
 						</a>
-						<a class="skoda" href="#">
+						<a class="skoda" href="#2">
 							<div>				
 								<h1>Auglýsing 2</h1>
 								<h3>Getur ýtt á til að opna link<br>Á eftir að breyta litum finnst þeir ekki passa</h3>
 							</div>
 						</a>
-						<a class="skoda" href="#">
+						<a class="skoda" href="#3">
 							<div>				
 								<h1>Auglýsing 3</h1>
 								<h3>Getur ýtt á til að opna link<br>Á eftir að breyta litum finnst þeir ekki passa</h3>
 							</div>
 						</a>
-						<a class="skoda" href="#">
+						<a class="skoda" href="#4">
 							<div>				
 								<h1>Auglýsing 4</h1>
 								<h3>Getur ýtt á til að opna link<br>Á eftir að breyta litum finnst þeir ekki passa</h3>
 							</div>
 						</a>
-						<a class="skoda" href="#">
+						<a class="skoda" href="#5">
 							<div>				
 								<h1>Auglýsing 5</h1>
 								<h3>Getur ýtt á til að opna link<br>Á eftir að breyta litum finnst þeir ekki passa</h3>
@@ -70,14 +70,16 @@
 			</section>
 			<footer>
 				<div class="frettir">
-					<div class="yfirfrettir">
-						<h1>Fréttir</h1>
-					</div>
+					<a href="#umDeadpool">
+						<div class="yfirfrettir">
+							<h1>Fréttir</h1>
+						</div>
+					</a>
 					
 					<div class="undirfrettir">
-					<div class="undirfrettir_frettir1"><h4>Frétt 2</h4><img src="deadpool.gif"></div>
-					<div class="undirfrettir_frettir2"><h4>Frétt 3</h4><img src="deadpool1.gif"></div>
-					<div class="undirfrettir_frettir3"><h4>Frétt 4</h4><img src="deadpool2.gif"></div>
+					<div class="undirfrettir_frettir1"><h4>Hann er aðeins öðruvísi</h4><img src="deadpool.gif"></div>
+					<div class="undirfrettir_frettir2"><h4>Tekur þessu ekki alvarlega</h4><img src="deadpool1.gif"></div>
+					<div class="undirfrettir_frettir3"><h4>En er badass</h4><img src="deadpool2.gif"></div>
 					</div>
 				</div>
 				<div class="insta">
